# jdb

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  folder_structure.md
bench/: Cargo.toml
cli/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
sql/: Cargo.toml
storage/: Cargo.toml
storage/src/: lib.rs
storage/src/file/: mod.rs
storage/src/page/: mod.rs
