[package]
name = "jdb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
serde_json = "1.0"
hex = "0.4"
